--- a/240213.md
+++ b/240213.md
@@ -1,5 +1,3 @@
-# 24.02.13
-
 # #28 pop-up sheets and full screen
 
 - .sheet(isPresented, content)
@@ -40,3 +38,102 @@ NewScreen()
 이 메소드를 이용하여 커스텀 pop버튼 구현 가능
 - .navigationBarItems(leading, trailing)
 - .navigationView는 하나만 써라! 한 뷰에!
+
+# #31 List()
+
+- specialized VStack
+
+```swift
+@State var fruits: [String] = [
+"apple", "orange", "banana", "peach"
+]
+
+List {
+	ForEach(fruits, id: \.self) { fruit in
+		Text(fruit.capitalized)
+}
+.onDelete(perform: { indexSet in 
+	//fruits.remove(atOffsets: indexSet)
+	//이 부분을 delete함수로 따로 뺌
+	delete(indexSet: indexSet)
+})
+}
+```
+
+- .onMove()
+- .navigationBarItem , editButton()
+- .listStyle()
+
+# #32 .alert()
+
+```swift
+@State var showAlert: Bool = false
+
+.alert(isPresented: $showAlert, content: {
+	Alert(title: Text, primaryButton: .destructive(Text,action))
+}
+```
+
+# #33 ActionSheet()
+
+- .actionSheet(isPresented, content)
+- 토스트 처럼 띄우는 버튼 리스트 들
+- enum을 적절하게 사용
+
+# #34 .contextMenu()
+
+.contextMenu(menuItems)
+
+# #35 TextField
+
+```swift
+@State var textFieldText: String = ""
+
+TextField("placeholder", text: $textFieldText)
+//.textFieldStyle
+//background(Color.grey.opacity(0.3).cornerRadius(10))
+
+func saveText() {
+	dataAraay.append(textFieldText)
+} 
+```
+
+- Text 글자에 따라 활성화 비활성화 여부를 결정
+
+# #36 TextEditor
+
+- multiple 라인 지원
+- TextEditor(text: $textEditorText)
+
+# #37 Toggle()
+
+- 스위치
+
+```swift
+Toggle(
+	isOn: //.constant(false) $toggleIsOn
+	label:
+)
+```
+
+# #38 Picker()
+
+```swift
+var body: some View {
+      VStack {
+        Picker("Choose a color", selection: $selectedColor) {
+          ForEach(colors, id: \.self) {
+            Text($0)
+          }
+        }
+        .pickerStyle(.wheel)
+        .background(.yellow)
+        .cornerRadius(15)
+        .padding()
+        
+        Text("You selected: \(selectedColor)")
+      }
+    }
+```
+
+- 다양한 pickerStyle로 설정 가능
