--- a/240214.md
+++ b/240214.md
@@ -1,3 +1,5 @@
+# 24.02.14
+
 # Swipe View
 
 ```swift
@@ -54,3 +56,192 @@ TabView {
 ```
 
 - .onDisappear도 비슷함
+
+# #47 if let & guard
+
+- for safe coding
+
+```swift
+if let text = displayText {
+	Text(text)
+}
+
+if isLoading { progressView() }
+```
+
+- 
+
+```swift
+guard let userID = currentUserID else {}
+```
+
+- guard는 값이 없을때에 예외 처리에 중점
+
+# #48 .onTapGesture
+
+```swift
+.onTapGesture {
+	action
+}
+
+.onTapGesture(count: 2, perform: {
+	action
+})
+// 버튼의 액션 처럼 사용할 수 있음
+```
+
+# #49 Custom Data
+
+```swift
+struct UserModel {
+	let displayName: String
+	let followerCount: Int
+}
+
+@State var users: [UserModel] = [
+	UserModel(displayName: "Nick", userName: "123", followercount: 1)
+]
+```
+
+- UUID().uuidString
+→ 랜덤한 id값 생성 가능
+
+# #50 StateObject & ObservableObject
+
+```swift
+class FruitViewModel {
+	@Published var fruitArray: [FruitModel] = []
+	// FUNCTIONS 관련 부분도 여기에 작성
+	func deleteFruit(index: IndexSet) {
+		fruitArray.remove(atOffset: index)
+}
+}
+
+//view - body내에서는
+var fruitViewModel: FruitViewModel = FruitViewModel()
+
+// fruitViewModel.fruitArray로 접근
+```
+
+```swift
+@ObserveObject var fruitViewModel : FruitViewModel = FruitViewModel()
+
+//class FruitViewModel: ObservableObject
+//변화가 뷰 모델에서 감지 되었을 때 fruitViewModel을 사용한 해당 부분에 관찰하여 모든 부분을 업데이트
+```
+
+- Published, 
+ObservableObject
+    
+    → use this for subviews
+    , StateObject(refresh 안함)
+    → Use this on creation/init
+    
+    1. ObservableObject를 준수하는 클래스 내에서 @Published 속성 래퍼를 사용하고,
+    2. @Published 속성은 변경되는 사항을 등록한 모든 View에 알림.
+    3. View는 @StateObject 프로퍼티 래퍼를 사용해 이 ObservableObject와 연결될 수 있음.
+    
+    ### ObservableObject
+    
+    - @Published 속성값이 변경됨을 View에 알림
+    
+    ### @Published
+    
+    - 게시자
+    - 변경되면 새 값을 전송하거나 게시
+    
+    ### @StateObject
+    
+    - 구독자
+    - 변경사항 수신
+    - 그 후 View내부에서 @Published 속성을 사용하는 위치를 찾아, 다음 업데이트 된 값을 표시하도록 관련된 뷰를 다시 그림
+
+# #51 EnvironmentObject
+
+- 의존성을 주입하기 위한 편리한 기능
+- **EnvironmentObject** 가 편리한 이유는 이니셜라이저를 통해 명시적으로 의존성을 주입하는 것이 아닌, 뷰 계층 구조에 의존성을 암시적으로 공유할 수 있기 때문입니다.
+
+SwiftUI에서 EnvironmentObject는 여러 뷰 간에 데이터를 공유하기 위한 강력한 도구입니다. 이를 통해 앱의 상태나 설정과 같은 데이터를 뷰 계층 구조 전체에서 손쉽게 액세스할 수 있습니다.
+
+EnvironmentObject를 사용하려면, 먼저 ObservableObject를 준수하는 클래스를 만들어야 합니다. 이 클래스는 앱의 전역 데이터를 저장하고 업데이트할 수 있도록 합니다. 그런 다음, 앱의 상위 뷰에서 EnvironmentObject로 설정하면 하위 뷰에서 해당 객체에 접근할 수 있습니다.
+
+예를 들어, 앱의 테마 설정을 저장하고 관리하는 ThemeManager 클래스를 ObservableObject로 구현한다고 가정해 보겠습니다. 이 클래스를 EnvironmentObject로 설정하면 앱의 모든 뷰에서 ThemeManager 인스턴스에 쉽게 액세스할 수 있습니다. 이를 통해 모든 뷰에서 테마 설정을 변경하고 업데이트할 수 있습니다.
+
+```swift
+import SwiftUI
+
+// ThemeManager 클래스는 앱의 테마 설정을 관리합니다.
+class ThemeManager: ObservableObject {
+    @Published var currentTheme: Theme = .light // 현재 테마
+    
+    enum Theme {
+        case light
+        case dark
+    }
+    
+    // 테마를 전환하는 메서드
+    func toggleTheme() {
+        currentTheme = (currentTheme == .light) ? .dark : .light
+    }
+}
+
+// 상위 뷰에서 EnvironmentObject로 설정
+
+//여기가 만드는 뷰
+@main
+struct MyApp: App {
+    @StateObject var themeManager = ThemeManager()
+    
+    var body: some Scene {
+        WindowGroup {
+            ContentView()
+                .environmentObject(themeManager) // ThemeManager를 EnvironmentObject로 설정
+        }
+    }
+}
+
+// 하위 뷰에서 EnvironmentObject 사용
+struct ContentView: View {
+    @EnvironmentObject var themeManager: ThemeManager // EnvironmentObject로 선언
+    
+    var body: some View {
+        VStack {
+            Text("Welcome to MyApp")
+                .padding()
+                .foregroundColor(themeManager.currentTheme == .light ? .black : .white)
+            Button(action: {
+                themeManager.toggleTheme() // 테마 전환 버튼
+            }) {
+                Text("Toggle Theme")
+            }
+        }
+    }
+}
+```
+
+```swift
+class EnvironmentViewModel: ObservableObject {
+
+	@Published var dataArray: [String] = []
+
+	init() {}
+
+	func getData() {
+		self.dataArray.append("iPhone")
+	}
+}
+
+@StateObject var viewModel: EnvironmentViewModel = EnvironmentViewModel()
+```
+
+- 기존의 문제점
+- 삼중의 스택으로 이어지는 뷰가 있다면
+만약 두 번째 뷰가 VM의 요소를 안쓰더라도
+VM을 선언하여 3번째 view로 굳이 일일이 넘겨줘여함
+- EnvironmentObject를 사용하여 모든 계층에서 접근 가능
+- .environmentObject(viewModel)로 선언한 부분에서 던짐
+- @EnvironmentObject var viewModel: EnvironmentViewModel
+
+# #52 @AppStorage
+
+- UserDefaults
