--- a/240214.md
+++ b/240214.md
@@ -245,3 +245,24 @@ VM을 선언하여 3번째 view로 굳이 일일이 넘겨줘여함
 # #52 @AppStorage
 
 - UserDefaults
+- UserDefaults.standard.set(name, forKey: “name”)
+
+```swift
+.onAppear {
+	currentUserName = UserDefaults.standatd.string(forKey: "name")
+// Appear 될때 userdefaults를 조회해서 적용
+}
+```
+
+```swift
+@AppStorage("name") var currentUserName: String?
+```
+
+- AppStorage를 사용하면 UserDefaults를 업데이트 하는 부분만 구현하면 onAppear과정 따로 없이 자동으로 적용됨을 알 수 있다.
+- 
+
+```swift
+currentUserName = name
+```
+
+# Onboarding
