--- a/240223.md
+++ b/240223.md
@@ -183,3 +183,202 @@ Picker("Flavor", selection: $selectedFlavor) {
 ```
 
 # **NavigationView, NavigationLink**
+
+# **Layout, Presentation**
+
+# Stack
+
+## **@unknown** 먼저 알기
+
+- enum타입을 접근하는 switch-case문에서 사용되는 키워드
+- 추가적인 case가 생겼을 때, 기존에 switch-case문에서 해당 case를 선언하지 않고 @unknown default로 선언해 놓으면 사용하는 쪽에서 warning 메시지를 받아볼 수 있어 인지할 수 있게끔 하는 키워드
+- 그냥 default만 사용하면 어떤 새로 추가되는 case가 있는지 모르지만, @unlnown default를 사용하면 추가적인 case문이 있다고 warning메시지로 알려주는 기능
+
+## frozen: 얼은 상태
+
+- (enum 타입에서 case가 추가적으로 생겨나지 않을 것임을 명시)
+- 컴파일러는 더욱 효율적으로 컴파일
+- Library Evolution mode가 안켜져있으면 키워드를 안써도 암묵적으로 모두 @frozen으로 생성
+
+# **List**
+
+## MultiSelection
+
+```swift
+import SwiftUI
+
+struct Ocean: Identifiable {
+  var name: String
+  let id = UUID()
+}
+
+struct Sea: Hashable, Identifiable {
+  let name: String
+  let id = UUID()
+}
+
+struct OceanRegion: Identifiable {
+  let name: String
+  let seas: [Sea]
+  let id = UUID()
+}
+
+struct FileItem: Hashable, Identifiable, CustomStringConvertible {
+  var id: Self { self }
+  var name: String
+  var children: [FileItem]? = nil
+  var description: String {
+    switch children {
+    case nil:
+      return "📄 \(name)"
+    case .some(let children):
+      return children.isEmpty ? "📂 \(name)" : "📁 \(name)"
+    }
+  }
+}
+
+struct ContentView: View {
+  @State private var multiSelection = Set<UUID>()
+  @State private var isOn = false
+  @State private var singleSelection: UUID?
+  
+  private var oceans = [
+    Ocean(name: "Pacific"),
+    .init(name: "Atlantic"),
+    .init(name: "Indian"),
+    .init(name: "Southern"),
+    .init(name: "Arctic"),
+  ]
+  
+  private let oceanRegions: [OceanRegion] = [
+    OceanRegion(name: "Pacific",
+                seas: [Sea(name: "Australasian Mediterranean"),
+                       Sea(name: "Philippine"),
+                       Sea(name: "Coral"),
+                       Sea(name: "South China")]),
+    OceanRegion(name: "Atlantic",
+                seas: [Sea(name: "American Mediterranean"),
+                       Sea(name: "Sargasso"),
+                       Sea(name: "Caribbean")]),
+    OceanRegion(name: "Indian",
+                seas: [Sea(name: "Bay of Bengal")]),
+    OceanRegion(name: "Southern",
+                seas: [Sea(name: "Weddell")]),
+    OceanRegion(name: "Arctic",
+                seas: [Sea(name: "Greenland")])
+  ]
+  
+  let fileHierarchyData: [FileItem] = [
+    FileItem(name: "users", children:
+              [FileItem(name: "user1234", children:
+                          [FileItem(name: "Photos", children:
+                                      [FileItem(name: "photo001.jpg"),
+                                       FileItem(name: "photo002.jpg")]),
+                           FileItem(name: "Movies", children:
+                                      [FileItem(name: "movie001.mp4")]),
+                           FileItem(name: "Documents", children: [])
+                          ]),
+               FileItem(name: "newuser", children:
+                          [FileItem(name: "Documents", children: [])
+                          ])
+              ]),
+    FileItem(name: "private", children: nil)
+  ]
+  
+  var body: some View {
+    // MARK: Basic
+    //    List {
+    //      Text("A List Item")
+    //      Text("A Second List Item")
+    //      Text("A Third List Item")
+    //    }
+    
+    // MARK: Selections
+    //    NavigationView {
+    //      List(oceans, selection: $multiSelection) {
+    //        Text($0.name)
+    //      }
+    //      .navigationTitle("Oceans")
+    //      .toolbar { EditButton() }
+    //    }
+    //    Text("\(multiSelection.count) selections")
+    
+    // MARK: Refresh
+    //    NavigationView {
+    //      VStack {
+    //        List(oceans, selection: $multiSelection) {
+    //          Text($0.name)
+    //        }
+    //        .navigationTitle("Oceans")
+    //        .refreshable {
+    //          await getSomeData()
+    //        }
+    //        Toggle("Toggle", isOn: $isOn)
+    //      }
+    //    }
+    
+    // MARK: Section
+    //    NavigationView {
+    //      List(selection: $singleSelection) {
+    //        ForEach(oceanRegions) { region in
+    //          Section(
+    //            content: {
+    //              ForEach(region.seas) { sea in
+    //                Text(sea.name)
+    //              }
+    //            },
+    //            header: {
+    //              Text("Header \(region.name)")
+    //            }
+    //          )
+    //        }
+    //      }
+    //    }
+    
+    // MARK: Hierarchical List
+    List(fileHierarchyData, children: \.children) { item in
+      Text(item.description)
+    }
+  }
+  
+  func getSomeData() async {
+    await Task.sleep(3_000_000_000) // 3seconds
+    isOn.toggle()
+  }
+}
+
+struct ContentView_Previews: PreviewProvider {
+  static var previews: some View {
+    ContentView()
+  }
+}
+```
+
+# ForEach
+
+```swift
+private struct NamedFont: Identifiable {
+    let name: String
+    let font: Font
+    var id: String { name }
+  }
+  private let namedFonts: [NamedFont] = [
+    NamedFont(name: "Large Title", font: .largeTitle),
+    NamedFont(name: "Title", font: .title),
+    NamedFont(name: "Headline", font: .headline),
+    NamedFont(name: "Body", font: .body),
+    NamedFont(name: "Caption", font: .caption)
+  ]
+
+var body: some View {
+    ForEach(namedFonts) { namedFont in
+      Text(namedFont.name)
+        .font(namedFont.font)
+    }
+  }
+```
+
+# Form
+
+- Form은 매우 직관적으로 설정화면에서 사용되는 기능들을 쉽게 구현할 수 있는 컴포넌트
+- Section과 같이 사용되며 쉽게 그룹화가 가능
